# linux_learning

./: .gitignore  AGENTS.md  linux_fileio_learning_plan.md  myrd  seeker
fileio/: CMakeLists.txt  copy.txt  test_file.txt
fileio/01_basic/: file_copy.cpp  my_reader.cpp  read_append.cpp  simple_reader.cpp
fileio/02_position/: file_seeker.cpp  file_stats.cpp
fileio/03_directory/: dir_list.cpp  dir_walker.cpp
fileio/04_advanced/: file_lock.cpp  memory_map.cpp
fileio/05_projects/logger/: logger.cpp  logger.h  main.cpp
fileio/log_analyzer/: CMakeLists.txt  README.md  output.csv  report.json
fileio/log_analyzer/include/: directory_walker.h  file_reader.h  log_filter.h  log_parser.h  report_generator.h
fileio/log_analyzer/src/: directory_walker.cpp  file_reader.cpp  log_filter.cpp  log_parser.cpp  main.cpp  report_generator.cpp
fileio/log_analyzer/src/tools/: log_format.cpp  log_search.cpp  log_stats.cpp
fileio/log_analyzer/tests/: test_file_reader.cpp  test_parser.cpp
fileio/program/: CMakeLists.txt  README.md
fileio/program/include/: Student.h  StudentManager.h
fileio/program/src/: StudentManager.cpp  main.cpp
proc_thread/: CMakeLists.txt  README.md
proc_thread/01_process/: fork_demo.cpp
proc_thread/02_process_wait/: wait_demo.cpp
proc_thread/03_ipc_pipe/: pipe_demo.cpp
proc_thread/04_threads/: thread_demo.cpp
proc_thread/05_threads_mutex/: counter_demo.cpp
proc_thread/06_threads_condition/: producer_consumer.cpp
